fixing (maybe) th eweird jumpy zooming on fonts loading

--- a/sass/_typo.scss
+++ b/sass/_typo.scss
@@ -239,7 +239,7 @@
 	time {
 
 		opacity: 0;
-
+		transition: opacity .3s ease-out;
 	}
 }
 .wf-active {
